--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -71,21 +71,28 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   padding: 0;
   margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  /* height: 100vh; */
+  /* position: relative; */
+  /* overflow-y: scroll; */
+  /* max-width: 100vw; */
+  width: 100%;
+  /* scroll-snap-type: proximity; */
+  scroll-snap-type: y mandatory;
+  /* scroll-margin-top: 80px; */
+  scrollbar-gutter: always;
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -98,10 +105,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
+} */
+/* 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
